chore: update grammar module and fix edge cases for session interupption
